added svg logo and font-weight in navbar-brand

--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -1,5 +1,9 @@
 @import 'variables';
 
 nav {
-    font-family: 'Montserrat';
+  font-family: 'Montserrat';
+}
+
+.navbar-brand {
+  font-weight: 500;
 }
