--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -4,7 +4,7 @@
       class="navbar-brand text-uppercase"
       href="#"
     >
-      <img src="/assets/icons/fireworth.png" height="24">
+      <img src="/assets/icons/fireworth.svg" height="24">
       FIREWORTH
     </a>
     <button
