--- a/frontend/src/app/statements/statements.component.html
+++ b/frontend/src/app/statements/statements.component.html
@@ -1,4 +1,6 @@
 <div class="mb-3">
   <app-period-picker (onPeriodFilterChange)="onPeriodFilterChange($event)"></app-period-picker>
 </div>
-<app-balance-sheet [balanceSheet]="balanceSheet"></app-balance-sheet>
+<div class="overflow-auto">
+  <app-balance-sheet [balanceSheet]="balanceSheet"></app-balance-sheet>
+</div>
