--- a/frontend/src/app/statements/balance-sheet/balance-sheet.component.html
+++ b/frontend/src/app/statements/balance-sheet/balance-sheet.component.html
@@ -2,7 +2,7 @@
   id="header"
   class="h1 mb-3 p-2 align-items-center rounded text-center text-uppercase"
 >
-  {{'STATEMENTS.BALANCE_SHEET' | translate}}
+  {{'VIEWS.STATEMENTS.BALANCE_SHEET' | translate}}
 </div>
 <div class="mb-3">
   <app-statement-header [period]="balanceSheet?.period"></app-statement-header>
