--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -24,7 +24,7 @@
           aria-current="page"
           routerLink="/home"
           routerLinkActive="active"
-        >{{'NAV.HOME' | translate}}</a>
+        >{{'VIEWS.NAV.HOME' | translate}}</a>
         <a
           class="nav-link"
           routerLink="/ledger"
@@ -34,7 +34,7 @@
             class="ms-1"
             [icon]="faBookOpen"
           ></fa-icon>
-          {{'NAV.LEDGER' | translate}}
+          {{'VIEWS.NAV.LEDGER' | translate}}
         </a>
         <a
           class="nav-link"
@@ -45,7 +45,7 @@
             class="ms-1"
             [icon]="faCreditCard"
           ></fa-icon>
-          {{'NAV.EXPENSES' | translate}}
+          {{'VIEWS.NAV.EXPENSES' | translate}}
         </a>
         <a
           class="nav-link"
@@ -56,7 +56,7 @@
             class="ms-1"
             [icon]="faTableColumns"
           ></fa-icon>
-          {{'NAV.STATEMENTS' | translate}}
+          {{'VIEWS.NAV.STATEMENTS' | translate}}
         </a>
         <a
           class="nav-link"
@@ -67,7 +67,7 @@
             class="ms-1"
             [icon]="faChartBar"
           ></fa-icon>
-          {{'NAV.PROGRESS' | translate}}
+          {{'VIEWS.NAV.PROGRESS' | translate}}
         </a>
         <a
           class="nav-link"
@@ -78,13 +78,11 @@
             class="ms-1"
             [icon]="faChartLine"
           ></fa-icon>
-          {{'NAV.FORECASTING' | translate}}
+          {{'VIEWS.NAV.FORECASTING' | translate}}
         </a>
       </div>
     </div>
   </div>
 </nav>
 
-<div class="container">
-  <router-outlet></router-outlet>
-</div>
+<router-outlet></router-outlet>
