--- a/frontend/src/styles/_vendor.scss
+++ b/frontend/src/styles/_vendor.scss
@@ -1,3 +1,4 @@
 @import './variables';
-@import "~bootstrap/scss/bootstrap";
-@import "~ngx-bootstrap/datepicker/bs-datepicker";
+@import './ngx-datatable';
+@import '~bootstrap/scss/bootstrap';
+@import '~ngx-bootstrap/datepicker/bs-datepicker';
